--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
   "version": "0.0.1",
   "scripts": {
     "dev": "dotenv -v NODE_ENV=development -e .env.development -- tsx watch src/main.ts",
+    "prebuild": "rimraf dist",
     "build": "tsc -p tsconfig.build.json",
     "start": "node dist/main.js",
     "lint": "eslint",
-    "migrate": "dotenv -v NODE_ENV=development -e .env.development -- prisma migrate dev --schema src/infra/database/schema.prisma",
+    "migrate:dev": "dotenv -v NODE_ENV=development -e .env.development -- prisma migrate dev --schema src/infra/database/schema.prisma",
+    "migrate:deploy": "dotenv -v NODE_ENV=development -e .env.development -- prisma migrate deploy --schema src/infra/database/schema.prisma",
     "generate": "dotenv -v NODE_ENV=development -e .env.development -- prisma generate --schema src/infra/database/schema.prisma",
     "studio": "dotenv -v NODE_ENV=development -e .env.development -- prisma studio --schema src/infra/database/schema.prisma",
     "test": "dotenv -v NODE_ENV=testing -e .env.testing -- jest",
@@ -47,6 +49,7 @@
     "jest": "^29.3.1",
     "prettier": "^2.8.1",
     "prisma": "^4.8.0",
+    "rimraf": "^3.0.2",
     "tsx": "^3.12.1",
     "typescript": "^4.9.4"
   },
@@ -54,7 +57,7 @@
     "name": "Luciano Alves"
   },
   "engines": {
-    "node": "^16.14.0"
+    "node": ">16.12.0"
   },
   "license": "GPL-3.0"
 }
